# static_pool

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
