[package]
name = "static_pool"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Fortes <me@danielfortes.com>"]
license = "MIT"
description = "A simple fixed-sized static pool of items."
repository = "https://github.com/dmbfm/static_pool"
keywords = ["stack", "static", "pool", "array"]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
